--- a/Site/index.html
+++ b/Site/index.html
@@ -52,55 +52,65 @@
         <div class="parallax-principal">
             <!--seções-->
             <div class="row">
-                <div class="col-xs-10 col-xs-offset-1">
-                <br>
-                <button id="btn-recomendacao" class=" btn btn-lg text-center sombra btn-primary">Recomendações</button>
-                <button id="btn-pratos-novos" class="disabled btn btn-lg text-center sombra btn-success">Pratos Novos</button>
-                <button id="btn-promocoes" class="btn btn-lg text-center sombra btn-danger">Promoções</button>
-                <br>
+                <div class="col-xs-9 col-xs-offset-2">
+                    <br>
+                    <button id="btn-recomendacao" class="aba btn btn-lg text-center sombra btn-primary">Recomendações</button>
+                    <button id="btn-pratos-novos" class="aba disabled btn btn-lg text-center sombra btn-success">Pratos Novos</button>
+                    <button id="btn-promocoes" class="aba btn btn-lg text-center sombra btn-danger">Promoções</button>
                 </div>
             </div>
             <!--seções-->
             <!--novos pratos-->
-            <div id="lista-pratos-novos">
-                <div class="row">
-                    <div class="col-xs-10 col-xs-offset-1">
-                        <div class="row bolha">
-                            <div class="col-md-5 col-md-offset-1 col-xs-10">
-                                <img class="img-responsive img-thumbnail" src="imagens/pratos/pexels-photo-70497.jpeg" alt="comida 2">
-                            </div>
-                            <div class="col-md-5 col-xs-10">
-                                <p>Lorem ipsum bibendum posuere accumsan venenatis fringilla sagittis erat ut lobortis ullamcorper ultricies himenaeos, donec tempus suspendisse venenatis eros neque consequat eros a malesuada class sagittis. erat phasellus ullamcorper volutpat primis mattis neque sodales, imperdiet eleifend netus nec pretium sapien integer lectus, ultricies suspendisse cubilia habitant vitae arcu. leo vel pretium curae ullamcorper lorem ultricies sodales nullam, mattis pharetra senectus primis risus eu imperdiet neque est, pellentesque facilisis viverra quis torquent duis quis. mattis inceptos euismod nisi lobortis accumsan cubilia sagittis, et blandit gravida massa varius etiam tortor, augue venenatis ornare cras vitae aenean. </p>
-                                <p>Dictum et tortor sodales blandit at lobortis fermentum aenean, interdum nisl elit tempor malesuada velit faucibus. viverra fringilla metus vestibulum leo cubilia eget integer malesuada, porttitor non ut eu quam odio elit, litora egestas duis suspendisse risus venenatis lobortis. lacinia laoreet conubia ut leo semper tellus sodales, euismod venenatis vivamus erat tortor at cras donec, elementum sem nec eleifend risus sociosqu accumsan, aliquam lacinia per class cubilia orci. ad porttitor laoreet inceptos aliquam blandit pharetra varius lacinia interdum accumsan, viverra mauris torquent diam augue libero condimentum quisque tortor nullam, phasellus auctor ante bibendum at donec posuere auctor feugiat. </p>
-                                <p>Tincidunt aenean hendrerit magna quisque, imperdiet rhoncus varius. </p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-10 col-xs-offset-1">
-                        <div class="row bolha">
-                            <div class="col-md-5 col-md-offset-1">
-                                <p>Lorem ipsum bibendum posuere accumsan venenatis fringilla sagittis erat ut lobortis ullamcorper ultricies himenaeos, donec tempus suspendisse venenatis eros neque consequat eros a malesuada class sagittis. erat phasellus ullamcorper volutpat primis mattis neque sodales, imperdiet eleifend netus nec pretium sapien integer lectus, ultricies suspendisse cubilia habitant vitae arcu. leo vel pretium curae ullamcorper lorem ultricies sodales nullam, mattis pharetra senectus primis risus eu imperdiet neque est, pellentesque facilisis viverra quis torquent duis quis. mattis inceptos euismod nisi lobortis accumsan cubilia sagittis, et blandit gravida massa varius etiam tortor, augue venenatis ornare cras vitae aenean. </p>
-                                <p>Dictum et tortor sodales blandit at lobortis fermentum aenean, interdum nisl elit tempor malesuada velit faucibus. viverra fringilla metus vestibulum leo cubilia eget integer malesuada, porttitor non ut eu quam odio elit, litora egestas duis suspendisse risus venenatis lobortis. lacinia laoreet conubia ut leo semper tellus sodales, euismod venenatis vivamus erat tortor at cras donec, elementum sem nec eleifend risus sociosqu accumsan, aliquam lacinia per class cubilia orci. ad porttitor laoreet inceptos aliquam blandit pharetra varius lacinia interdum accumsan, viverra mauris torquent diam augue libero condimentum quisque tortor nullam, phasellus auctor ante bibendum at donec posuere auctor feugiat. </p>
-                                <p>Tincidunt aenean hendrerit magna quisque, imperdiet rhoncus varius. </p>
-                            </div>
-                            <div class="col-md-5">
-                                <img class="img-responsive img-thumbnail" src="imagens/pratos/pexels-photo-376464.jpeg" alt="comida 1">
+            <div class="row">
+                <div class="col-xs-10 col-xs-offset-1">
+                    <div id="lista-pratos-novos" class="bolha fundo-verde">
+                        <div class="row">
+                            <div class="col-xs-12">
+                                <br>
+                                <div class="row bolha">
+                                    <div class="col-md-6 col-xs-10">
+                                        <br>
+                                        <br>
+                                        <img class="img-responsive img-thumbnail" src="imagens/pratos/pexels-photo-70497.jpeg" alt="comida 2">
+                                    </div>
+                                    <div class="col-md-5 col-xs-10">
+                                        <p>Lorem ipsum bibendum posuere accumsan venenatis fringilla sagittis erat ut lobortis ullamcorper ultricies himenaeos, donec tempus suspendisse venenatis eros neque consequat eros a malesuada class sagittis. erat phasellus ullamcorper volutpat primis mattis neque sodales, imperdiet eleifend netus nec pretium sapien integer lectus, ultricies suspendisse cubilia habitant vitae arcu. leo vel pretium curae ullamcorper lorem ultricies sodales nullam, mattis pharetra senectus primis risus eu imperdiet neque est, pellentesque facilisis viverra quis torquent duis quis. mattis inceptos euismod nisi lobortis accumsan cubilia sagittis, et blandit gravida massa varius etiam tortor, augue venenatis ornare cras vitae aenean. </p>
+                                        <p>Dictum et tortor sodales blandit at lobortis fermentum aenean, interdum nisl elit tempor malesuada velit faucibus. viverra fringilla metus vestibulum leo cubilia eget integer malesuada, porttitor non ut eu quam odio elit, litora egestas duis suspendisse risus venenatis lobortis. lacinia laoreet conubia ut leo semper tellus sodales, euismod venenatis vivamus erat tortor at cras donec, elementum sem nec eleifend risus sociosqu accumsan, aliquam lacinia per class cubilia orci. ad porttitor laoreet inceptos aliquam blandit pharetra varius lacinia interdum accumsan, viverra mauris torquent diam augue libero condimentum quisque tortor nullam, phasellus auctor ante bibendum at donec posuere auctor feugiat. </p>
+                                        <p>Tincidunt aenean hendrerit magna quisque, imperdiet rhoncus varius. </p>
+                                    </div>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-10 col-xs-offset-1">
-                        <div class="row bolha">
-                            <div class="col-md-5 col-md-offset-1">
-                                <img class="img-responsive img-thumbnail" src="imagens/pratos/salmon-dish-food-meal-46239.jpeg" alt="comida 3">
+                        <div class="row">
+                            <div class="col-xs-12">
+                                <div class="row bolha">
+                                    <div class="col-md-5 col-md-offset-1">
+                                        <p>Lorem ipsum bibendum posuere accumsan venenatis fringilla sagittis erat ut lobortis ullamcorper ultricies himenaeos, donec tempus suspendisse venenatis eros neque consequat eros a malesuada class sagittis. erat phasellus ullamcorper volutpat primis mattis neque sodales, imperdiet eleifend netus nec pretium sapien integer lectus, ultricies suspendisse cubilia habitant vitae arcu. leo vel pretium curae ullamcorper lorem ultricies sodales nullam, mattis pharetra senectus primis risus eu imperdiet neque est, pellentesque facilisis viverra quis torquent duis quis. mattis inceptos euismod nisi lobortis accumsan cubilia sagittis, et blandit gravida massa varius etiam tortor, augue venenatis ornare cras vitae aenean. </p>
+                                        <p>Dictum et tortor sodales blandit at lobortis fermentum aenean, interdum nisl elit tempor malesuada velit faucibus. viverra fringilla metus vestibulum leo cubilia eget integer malesuada, porttitor non ut eu quam odio elit, litora egestas duis suspendisse risus venenatis lobortis. lacinia laoreet conubia ut leo semper tellus sodales, euismod venenatis vivamus erat tortor at cras donec, elementum sem nec eleifend risus sociosqu accumsan, aliquam lacinia per class cubilia orci. ad porttitor laoreet inceptos aliquam blandit pharetra varius lacinia interdum accumsan, viverra mauris torquent diam augue libero condimentum quisque tortor nullam, phasellus auctor ante bibendum at donec posuere auctor feugiat. </p>
+                                        <p>Tincidunt aenean hendrerit magna quisque, imperdiet rhoncus varius. </p>
+                                    </div>
+                                    <div class="col-md-6 col-xs-10">
+                                        <br>
+                                        <br>
+                                        <img class="img-responsive img-thumbnail" src="imagens/pratos/pexels-photo-376464.jpeg" alt="comida 1">
+                                    </div>
+                                </div>
                             </div>
-                            <div class="col-md-5">
-                                <p>Lorem ipsum bibendum posuere accumsan venenatis fringilla sagittis erat ut lobortis ullamcorper ultricies himenaeos, donec tempus suspendisse venenatis eros neque consequat eros a malesuada class sagittis. erat phasellus ullamcorper volutpat primis mattis neque sodales, imperdiet eleifend netus nec pretium sapien integer lectus, ultricies suspendisse cubilia habitant vitae arcu. leo vel pretium curae ullamcorper lorem ultricies sodales nullam, mattis pharetra senectus primis risus eu imperdiet neque est, pellentesque facilisis viverra quis torquent duis quis. mattis inceptos euismod nisi lobortis accumsan cubilia sagittis, et blandit gravida massa varius etiam tortor, augue venenatis ornare cras vitae aenean. </p>
-                                <p>Dictum et tortor sodales blandit at lobortis fermentum aenean, interdum nisl elit tempor malesuada velit faucibus. viverra fringilla metus vestibulum leo cubilia eget integer malesuada, porttitor non ut eu quam odio elit, litora egestas duis suspendisse risus venenatis lobortis. lacinia laoreet conubia ut leo semper tellus sodales, euismod venenatis vivamus erat tortor at cras donec, elementum sem nec eleifend risus sociosqu accumsan, aliquam lacinia per class cubilia orci. ad porttitor laoreet inceptos aliquam blandit pharetra varius lacinia interdum accumsan, viverra mauris torquent diam augue libero condimentum quisque tortor nullam, phasellus auctor ante bibendum at donec posuere auctor feugiat. </p>
-                                <p>Tincidunt aenean hendrerit magna quisque, imperdiet rhoncus varius. </p>
+                        </div>
+                        <div class="row">
+                            <div class="col-xs-12">
+                                <div class="row bolha">
+                                    <div class="col-md-6 col-xs-10">
+                                        <br>
+                                        <br>
+                                        <img class="img-responsive img-thumbnail" src="imagens/pratos/salmon-dish-food-meal-46239.jpeg" alt="comida 3">
+                                    </div>
+                                    <div class="col-md-5">
+                                        <p>Lorem ipsum bibendum posuere accumsan venenatis fringilla sagittis erat ut lobortis ullamcorper ultricies himenaeos, donec tempus suspendisse venenatis eros neque consequat eros a malesuada class sagittis. erat phasellus ullamcorper volutpat primis mattis neque sodales, imperdiet eleifend netus nec pretium sapien integer lectus, ultricies suspendisse cubilia habitant vitae arcu. leo vel pretium curae ullamcorper lorem ultricies sodales nullam, mattis pharetra senectus primis risus eu imperdiet neque est, pellentesque facilisis viverra quis torquent duis quis. mattis inceptos euismod nisi lobortis accumsan cubilia sagittis, et blandit gravida massa varius etiam tortor, augue venenatis ornare cras vitae aenean. </p>
+                                        <p>Dictum et tortor sodales blandit at lobortis fermentum aenean, interdum nisl elit tempor malesuada velit faucibus. viverra fringilla metus vestibulum leo cubilia eget integer malesuada, porttitor non ut eu quam odio elit, litora egestas duis suspendisse risus venenatis lobortis. lacinia laoreet conubia ut leo semper tellus sodales, euismod venenatis vivamus erat tortor at cras donec, elementum sem nec eleifend risus sociosqu accumsan, aliquam lacinia per class cubilia orci. ad porttitor laoreet inceptos aliquam blandit pharetra varius lacinia interdum accumsan, viverra mauris torquent diam augue libero condimentum quisque tortor nullam, phasellus auctor ante bibendum at donec posuere auctor feugiat. </p>
+                                        <p>Tincidunt aenean hendrerit magna quisque, imperdiet rhoncus varius. </p>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -108,9 +118,12 @@
             </div>
             <!--novos pratos-->
             <!--recomendacoes-->
-            <div id="lista-recomendacoes" class="some">
+            <div class="row">
+                <div class="col-xs-10 col-xs-offset-1">
+            <div id="lista-recomendacoes" class="some bolha fundo-azul">
                 <div class="row">
-                    <div class="col-xs-10 col-xs-offset-1">
+					<br>
+                    <div class="col-xs-12">
                         <div class="row bolha">
                             <div class="col-md-5 col-md-offset-1">
                                 <img class="img-responsive img-thumbnail" src="imagens/pratos/pexels-photo-262959.jpeg" alt="comida 3">
@@ -124,7 +137,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-xs-10 col-xs-offset-1">
+                    <div class="col-xs-12">
                         <div class="row bolha">
                             <div class="col-md-5 col-md-offset-1">
                                 <p>Lorem ipsum bibendum posuere accumsan venenatis fringilla sagittis erat ut lobortis ullamcorper ultricies himenaeos, donec tempus suspendisse venenatis eros neque consequat eros a malesuada class sagittis. erat phasellus ullamcorper volutpat primis mattis neque sodales, imperdiet eleifend netus nec pretium sapien integer lectus, ultricies suspendisse cubilia habitant vitae arcu. leo vel pretium curae ullamcorper lorem ultricies sodales nullam, mattis pharetra senectus primis risus eu imperdiet neque est, pellentesque facilisis viverra quis torquent duis quis. mattis inceptos euismod nisi lobortis accumsan cubilia sagittis, et blandit gravida massa varius etiam tortor, augue venenatis ornare cras vitae aenean. </p>
@@ -137,16 +150,17 @@
                         </div>
                     </div>
                 </div>
-                <br>
-                <br>
-                <br>
-                <br>
             </div>
-    <!--recomendacoes-->
-    <!--promoções-->
-    <div id="lista-promocoes" class="some">
+			</div>
+				</div>
+            <!--recomendacoes-->
+            <!--promoções-->
+			<div class="row">
+                <div class="col-xs-10 col-xs-offset-1">
+            <div id="lista-promocoes" class="some fundo-vermelho bolha">
                 <div class="row">
-                    <div class="col-xs-10 col-xs-offset-1">
+					<br>
+                    <div class="col-xs-12">
                         <div class="row bolha">
                             <div class="col-md-5 col-md-offset-1 col-xs-10">
                                 <img class="img-responsive img-thumbnail" src="imagens/pratos/food-dinner-pasta-spaghetti-8500.jpg" alt="comida 2">
@@ -160,7 +174,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-xs-10 col-xs-offset-1">
+                    <div class="col-xs-12">
                         <div class="row bolha">
                             <div class="col-md-5 col-md-offset-1">
                                 <p>Lorem ipsum bibendum posuere accumsan venenatis fringilla sagittis erat ut lobortis ullamcorper ultricies himenaeos, donec tempus suspendisse venenatis eros neque consequat eros a malesuada class sagittis. erat phasellus ullamcorper volutpat primis mattis neque sodales, imperdiet eleifend netus nec pretium sapien integer lectus, ultricies suspendisse cubilia habitant vitae arcu. leo vel pretium curae ullamcorper lorem ultricies sodales nullam, mattis pharetra senectus primis risus eu imperdiet neque est, pellentesque facilisis viverra quis torquent duis quis. mattis inceptos euismod nisi lobortis accumsan cubilia sagittis, et blandit gravida massa varius etiam tortor, augue venenatis ornare cras vitae aenean. </p>
@@ -174,7 +188,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-xs-10 col-xs-offset-1">
+                    <div class="col-xs-12">
                         <div class="row bolha">
                             <div class="col-md-5 col-md-offset-1">
                                 <img class="img-responsive img-thumbnail" src="imagens/pratos/pexels-photo-106343.jpeg" alt="comida 3">
@@ -188,9 +202,11 @@
                     </div>
                 </div>
             </div>
-    <!--promoções-->
-    <!--Footer-->
-    </div>
+			</div>
+				</div>
+            <!--promoções-->
+        </div>
+        <!--Footer-->
     </main>
     <footer id="footer-da-pagina">
         <br>
