mensagem de autoria no rodape

--- a/Site/index.html
+++ b/Site/index.html
@@ -249,6 +249,7 @@
             <br>
             <br>
         </div>
+		<center><p>Este site é um projeto pessoal de Régis Melgaço de Andrade, sem fins lucrativos, somente espositivos.</p></center>
     </footer>
 </body>
 <script src="js/muda-de-secao-index.js"></script>
