tamanho da coluna das imagens do index

--- a/Site/index.html
+++ b/Site/index.html
@@ -125,7 +125,7 @@
 					<br>
                     <div class="col-xs-12">
                         <div class="row bolha">
-                            <div class="col-md-5 col-md-offset-1">
+                            <div class="col-md-6 col-xs-10">
                                 <img class="img-responsive img-thumbnail" src="imagens/pratos/pexels-photo-262959.jpeg" alt="comida 3">
                             </div>
                             <div class="col-md-5">
@@ -144,7 +144,7 @@
                                 <p>Dictum et tortor sodales blandit at lobortis fermentum aenean, interdum nisl elit tempor malesuada velit faucibus. viverra fringilla metus vestibulum leo cubilia eget integer malesuada, porttitor non ut eu quam odio elit, litora egestas duis suspendisse risus venenatis lobortis. lacinia laoreet conubia ut leo semper tellus sodales, euismod venenatis vivamus erat tortor at cras donec, elementum sem nec eleifend risus sociosqu accumsan, aliquam lacinia per class cubilia orci. ad porttitor laoreet inceptos aliquam blandit pharetra varius lacinia interdum accumsan, viverra mauris torquent diam augue libero condimentum quisque tortor nullam, phasellus auctor ante bibendum at donec posuere auctor feugiat. </p>
                                 <p>Tincidunt aenean hendrerit magna quisque, imperdiet rhoncus varius. </p>
                             </div>
-                            <div class="col-md-5">
+                            <div class="col-md-6 col-xs-10">
                                 <img class="img-responsive img-thumbnail" src="imagens/pratos/pexels-photo-461198.jpeg" alt="comida 1">
                             </div>
                         </div>
@@ -162,7 +162,7 @@
 					<br>
                     <div class="col-xs-12">
                         <div class="row bolha">
-                            <div class="col-md-5 col-md-offset-1 col-xs-10">
+                            <div class="col-md-6 col-xs-10">
                                 <img class="img-responsive img-thumbnail" src="imagens/pratos/food-dinner-pasta-spaghetti-8500.jpg" alt="comida 2">
                             </div>
                             <div class="col-md-5 col-xs-10">
@@ -181,7 +181,7 @@
                                 <p>Dictum et tortor sodales blandit at lobortis fermentum aenean, interdum nisl elit tempor malesuada velit faucibus. viverra fringilla metus vestibulum leo cubilia eget integer malesuada, porttitor non ut eu quam odio elit, litora egestas duis suspendisse risus venenatis lobortis. lacinia laoreet conubia ut leo semper tellus sodales, euismod venenatis vivamus erat tortor at cras donec, elementum sem nec eleifend risus sociosqu accumsan, aliquam lacinia per class cubilia orci. ad porttitor laoreet inceptos aliquam blandit pharetra varius lacinia interdum accumsan, viverra mauris torquent diam augue libero condimentum quisque tortor nullam, phasellus auctor ante bibendum at donec posuere auctor feugiat. </p>
                                 <p>Tincidunt aenean hendrerit magna quisque, imperdiet rhoncus varius. </p>
                             </div>
-                            <div class="col-md-5">
+                            <div class="col-md-6 col-xs-10">
                                 <img class="img-responsive img-thumbnail" src="imagens/pratos/bbq-dinner-grilled-grill-72160.jpeg" alt="comida 1">
                             </div>
                         </div>
@@ -190,7 +190,7 @@
                 <div class="row">
                     <div class="col-xs-12">
                         <div class="row bolha">
-                            <div class="col-md-5 col-md-offset-1">
+                            <div class="col-md-6 col-xs-10">
                                 <img class="img-responsive img-thumbnail" src="imagens/pratos/pexels-photo-106343.jpeg" alt="comida 3">
                             </div>
                             <div class="col-md-5">
