abas de navegação no cardapio

--- a/Site/index.html
+++ b/Site/index.html
@@ -27,8 +27,8 @@
                 </div>
                 <div class="collapse navbar-collapse" id="myNavbar">
                     <ul class="nav navbar-nav">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Cardapio</a></li>
+                        <li class="disabled"><a href="#">Home</a></li>
+                        <li><a href="Cardapio.html">Cardapio</a></li>
                         <li><a href="#">Blog</a></li>
                         <li><a href="#">Como fazer um pedido</a></li>
                     </ul>
