--- a/Site/Cardapio.html
+++ b/Site/Cardapio.html
@@ -30,7 +30,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li class="disabled"><a href="#">Cardapio</a></li>
                     <li><a href="#">Blog</a></li>
-                    <li><a href="#">Como fazer um pedido</a></li>
+                    <li><a href="contatar.html">Como fazer um pedido</a></li>
                 </ul>
                 <form class="navbar-form navbar-right" role="search">
                     <div class="form-group">
