--- a/Site/index.html
+++ b/Site/index.html
@@ -30,7 +30,7 @@
                         <li class="disabled"><a href="#">Home</a></li>
                         <li><a href="Cardapio.html">Cardapio</a></li>
                         <li><a href="#">Blog</a></li>
-                        <li><a href="#">Como fazer um pedido</a></li>
+                        <li><a href="contatar.html">Como fazer um pedido</a></li>
                     </ul>
                     <form class="navbar-form navbar-right" role="search">
                         <div class="form-group">
