--- a/Site/contatar.html
+++ b/Site/contatar.html
@@ -26,10 +26,10 @@
          </div>
          <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
-               <li><a href="#">Home</a></li>
-               <li><a href="#">Cardapio</a></li>
+               <li><a href="index.html">Home</a></li>
+               <li><a href="Cardapio.html">Cardapio</a></li>
                <li><a href="#">Blog</a></li>
-               <li><a href="#">Como fazer um pedido</a></li>
+               <li class="disabled"><a href="#">Como fazer um pedido</a></li>
             </ul>
             <form class="navbar-form navbar-right" role="search">
                <div class="form-group">
